--- a/grpc_api/package.json
+++ b/grpc_api/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.3.0",
     "@grpc/proto-loader": "^0.6.1",
+    "dotenv": "^9.0.0",
     "grpc": "^1.24.9",
     "mongoose": "^5.12.7"
   }
